[package]
name = "bfi"
version = "0.1.0"
authors = ["Gordon Hart <gordon.hart2@gmail.com>"]
edition = "2018"

[lib]
name = "bfi"
path = "src/lib.rs"
crate-type = ["rlib", "dylib"]

[[bin]]
name = "bfi"
path = "src/bin/main.rs"

[dependencies]
clap = "2.33.0"
libc = "0.2.66"
rand = "0.7.2"
rustyline = "5.0.4"
